--- a/paper/submission/memo.qmd
+++ b/paper/submission/memo.qmd
@@ -23,7 +23,7 @@ subtitle: Memo to Editor and Reviewers
 
 ## Introduction {.unnumbered}
 **Framing**.
-We appreciate the reviewers' careful reading and suggestions for better framing the piece.
+We appreciate the reviewers' careful reading and their suggestions for better framing the piece.
 Following this advice, we reorganized the introduction into three paragraphs to address the relevance of Macrointerest, the challenges faced by previous research, and the specific contribution and findings.
 Reviewer 1 also specifically suggested that we contrast our work with that of @Peterson2022, and we do that in our second paragraph.
 (We also, at R1's suggestion, included an appendix comparing our estimates of macrointerest for the United States with those presented in that article; see Appendix E.)
@@ -53,20 +53,12 @@ On the recommendation of R1, we expanded and moved our discussion of the automat
 
 ## Estimating Cross-National Macrointerest {.unnumbered}
 **Method comparison**. 
-We follow R1's suggestion to compare DCPO with other methods, especially, @PetersonEtAl2022's Wcalc in more detail. 
+We follow R1's suggestion to compare DCPO with other methods, especially, @Peterson2022's Wcalc in more detail. 
 In the main text (p. XXXX), we state the rationale to use DCPO over Wcalc in this research and direct readers to a special appendix, Appendix XXX.
 In the new appendix, we discuss the methodological and operational differences between DCPO and Wcalc.
 Furthermore, we compare the outcomes from the two methods and point out the advantage of DCPO on yielding more efficient estimation by incorporating information from other countries and scaling. 
 
-**Scaling**. 
-R1 also suggested us to consider employing the cumulative distribution function (CDF) of the normal distribution---that is, the probit transformation---as an alternative to the logistic transformation, for scaling responses on the unit interval within the DCPO framework.
-We acknowledge and value this suggestion.
-The preference for the logistic function in the DCPO model is grounded in its inherent flexibility and enhanced tolerance for deviations from standard normal assumptions. 
-Pertinently, within the macrointerest context, we see little reason to presume that the the source data are devoid of extreme values or adhere to a symmetric distribution. 
-The logistic transformation exhibits greater leniency under such conditions compared to the normal CDF. 
-On the other hand, we concur with R1 that the interpretation of the probit transformation is more intuitive.
-We have added a discussion of these points to Appendix B, our summary of the DCPO model.
-Amd as the DCPO model is published as open source software on CRAN [@Solt2020a], future researchers have the option of modifying the transformation method if they see fit. 
+
 
 
 ## Validating Cross-National Macrointerest {.unnumbered}
@@ -121,6 +113,16 @@ Although there is little room for a more sufficient discussion due to the word l
 ## Appendices
 
 In the appendix, we added more information on the source surveys in order to give credit to data creators and enhance data-collection transparency (Appendix XXXX).
+
+**Scaling**. 
+R1 also suggested us to consider employing the cumulative distribution function (CDF) of the normal distribution---that is, the probit transformation---as an alternative to the logistic transformation, for scaling responses on the unit interval within the DCPO framework or at least discuss the relative merits of the two in the appendix.
+We appreciate the suggestion of the probit transformation.
+The preference for the logistic function in the DCPO model is grounded in its inherent flexibility and enhanced tolerance for deviations from standard normal assumptions. 
+Pertinently, within the macrointerest context, we see little reason to presume that the the source data are devoid of extreme values or adhere to a symmetric distribution. 
+The logistic transformation exhibits greater leniency under such conditions compared to the normal CDF. 
+On the other hand, we concur with R1 that the interpretation of the probit transformation is more intuitive.
+We have added a discussion of these points to Appendix B, our summary of the DCPO model.
+Amd as the DCPO model is published as open source software on CRAN [@Solt2020a], future researchers have the option of modifying the transformation method if they see fit. 
 
 R2 suggested that Figure A1 is hard to read. 
 We split that figure into several panels by region to allow it to be split across pages and so expanded for legibility. 
