--- a/paper/dcpo_macrointerest.Rmd
+++ b/paper/dcpo_macrointerest.Rmd
@@ -311,9 +311,9 @@ In light of the growing threats to democracy seen in many countries, measuring t
 A recent contribution, @Peterson2022, measures macrointerest over time in the United States, but similar data allowing for large-scale cross-sectional time-series assessments have as yet been unavailable.
 Although many surveys ask respondents across countries how interested they are in politics, differences in question wording and in response categories have limited scholars' ability to pool the data together, and even in the absence of these issues, in most countries the questions have not been asked sufficiently frequently to provide annual time series.
 
-This letter takes advantage of recent advances in latent-variable modeling of aggregate survey responses and a comprehensive collection of survey data to generate dynamic comparative estimates of aggregate political interest for over a hundred countries over the past four decades.
+This letter takes advantage of recent advances in latent-variable modeling of cross-national aggregate survey responses and a comprehensive collection of survey data to generate dynamic comparative estimates of aggregate political interest for over a hundred countries over the past four decades.
 It shows that these cross-national macrointerest scores perform well in validation tests.
-Finally, as a demonstration of their utility, the letter presents a new test of theories on the circumstances that induce the public of advanced democracies to take more interest in politics.
+Finally, as a demonstration of their utility, the letter presents a new test of theories on the circumstances that induce the publics of advanced democracies to take more interest in politics.
 The results support arguments that, in these countries, election campaigns, inclusive institutions, and good economic times, not bad ones, spur greater political interest.
 
 ```{r dcpo_input_raw, eval=FALSE}
@@ -587,12 +587,12 @@ The next section describes how this sparse and incomparable survey data was used
 # Estimating Cross-National Macrointerest {.unnumbered}
 
 Several recent studies have developed latent variable models of aggregate survey responses based on cross-national survey data [see @Claassen2019; @Caughey2019; @McGann2019; @Kolczynska2020].
-To estimate the public's interest in politics across countries and over time, this work employs the latest of these methods that is appropriate for data that are both incomparable and sparse, the Dynamic Comparative Public Opinion (DCPO) model elaborated in @Solt2020c.^[
+To estimate the public's interest in politics across countries and over time, this work employs the latest of these methods that is appropriate for data that are both incomparable and sparse, the Dynamic Comparative Public Opinion (DCPO) model elaborated in @Solt2020c.
 @Solt2020c demonstrates that the DCPO model provides a better fit to survey data than the models put forward by @Claassen2019 or @Caughey2019.
 The @McGann2019 model depends on dense survey data unlike the sparse data on interest in politics described in the preceding section.
 @Kolczynska2020 is the very most recent of these five works and builds on each of the others, but the MRP approach developed in that piece is suitable not only when the available survey data are dense but also when ancillary data on population characteristics are available, so it is similarly inappropriate to this application.
-The dyad-ratios model employed in @Peterson2022 generates time series of public opinion in only a single country and so is not suitable for cross-national analyses [see @Caughey2019, 686].
-A comparison of our estimates and the estimates produced in @Peterson2022 is found in Appendix\nobreakspace{}\@ref(peterson).]
+The dyad ratio algorithm employed in @Peterson2022, of course, leverages only over time variation within a single country and not variation across countries, making it a poor choice for generating cross-national estimates [see @Caughey2019, 686].^[
+A comparison of our estimates for the United States and the estimates presented in @Peterson2022 is found in Appendix\nobreakspace{}\@ref(peterson).]
 The DCPO model is a population-level two-parameter ordinal logistic item response theory model with country-specific item-bias terms.
 For a comprehensive description of the DCPO model, see Appendix\nobreakspace{}\@ref(dcpo) and @Solt2020c [, 3-8]; the focus here is on how it deals with the two principal issues raised by the source data, incomparability and sparsity.
 
@@ -603,7 +603,8 @@ Here, difficulty is permitted to vary with question wording and the survey proje
 Second, the DCPO model accounts for each question's _dispersion_, its noisiness with regard to our latent trait.
 The lower the dispersion, the better that changes in responses to the question map onto changes in macrointerest.
 Third, to provide for the possibility that translation issues or cultural differences result in the same question being interpreted differently in different countries, the model estimates _country-specific bias_ parameters that shift the difficulty of all responses for a particular question in a particular country.
-Together, the model's difficulty, dispersion, and country-specific bias parameters work to generate comparable estimates of the latent variable of macrointerest from the available but incomparable source data.^[See a discussion of how other data issues, such as sample representation, may affect the estimated outcome in Appendix\nobreakspace{}\@ref(dcpo).]
+Together, the model's difficulty, dispersion, and country-specific bias parameters work to generate comparable estimates of the latent variable of macrointerest from the available but incomparable source data.^[
+See a discussion of how other data issues, such as sample representation, may affect the estimated outcome in Appendix\nobreakspace{}\@ref(dcpo).]
 
 To address the sparsity of the source data---the fact that there are gaps in the time series of each country, and that even many observed country-years have only one or two observed items---DCPO uses simple local-level dynamic linear models, i.e., random-walk priors, for each country.
 That is, within each country, each year's value of macrointerest is modeled as the previous year's estimate plus a random shock.
