--- a/paper/submission/memo.qmd
+++ b/paper/submission/memo.qmd
@@ -66,8 +66,14 @@ Moreover, we point out to the readers that the correlations can also be affected
 
 
 ## Testing Theories of Macrointerest Cross-Nationally {.unnumbered}
+**Two-Step Approach**
+R1 also raised the question whether the analysis "could be achieved in a single step by integrating hierarchical priors into the model."
+We were somewhat puzzled by this comment, but we guessed the reviewer was referring to combining the measurement and analysis steps into a single model, as in @Claassen2022.
+We prefer to avoid such an approach, because it assumes that the indicators of macrointerest are missing at random with regard to the independent variables, and therefore that the relationship between macrointerest and these variables is the same in the countries when and where macrointerest is poorly observed as in the country-years where macrointerest is well observed, and this assumption is difficult to justify.
+If the reviewer had a different "single step" approach in mind, we apologize for not figuring it out.
+
 **Uncertainty**. 
-In response to R1's suggestion to provide more details about the uncertainty incorporation, we made a specific discussion in Footnote XXX. 
+In response to R1's suggestion to provide more details about how we incorporated uncertainty in our analysis, we made a specific discussion at page 11. 
 We used the "Method of Composition" to account for the uncertainty in the ex post analysis based on the estimated latent variable together with others. 
 This is a method that has been used in a series of latent variable analyses in political science. 
 We listed several other applications and also direct readers to a more detailed technical note of how the method is incorporated in the DCPO framework.
@@ -92,6 +98,9 @@ This has been beyond the scope of this research.
 
 In terms of the results of the hypothesis testing, we adopted R2's suggestion and rewrite the description of the findings from the perspective of posterior probabilities. 
 The credible intervals are kept in the visualization for both Bayesian and frequentist readers to understand the results.
+
+
+
 
 ## Conclusions
 **Good and bad times**.
