--- a/paper/submission/memo.bib
+++ b/paper/submission/memo.bib
@@ -1,5 +1,13 @@
 
 
+@misc{Solt2020a,
+	author = {Solt, Frederick},
+	date-added = {2023-12-22 15:02:22 -0600},
+	date-modified = {2023-12-22 15:02:22 -0600},
+	howpublished = {Available at the Comprehensive R Archive Network (CRAN). \verb+https://CRAN.R-project.org/package=DCPO+},
+	title = {DCPO: Dynamic Comparative Public Opinion},
+	year = {2020}}
+
 @article{Claassen2022,
 	author = {Claassen, Christopher},
 	date-added = {2023-12-22 13:18:09 -0600},
